Moving some assets to the assets manager.

--- a/docs.html
+++ b/docs.html
@@ -91,7 +91,7 @@
 
     <h2>Python</h2>
     <p>
-        You can open a python file with <code>Python::GetFile()</code> and then run the file with <code>Python::RunFile()</code>. You can also run just a function in the file. A python component coming soon...
+        You can open a python file with <code>Python::GetFile()</code> and then run the file with <code>Python::RunFile()</code>. You can also run just a function in the file. A python component coming soon... Hopefully
     </p>
 
     <h2>Audio</h2>
