Engine stability improvements 3

--- a/docs.html
+++ b/docs.html
@@ -50,7 +50,7 @@
 
     <h2>Build options</h2>
     <p>
-        Eagle build settings are located in Engine/src/EagleBuildSettings.h. (possibly changing soon) Here you can modify how the engine starts. You can disable the editor, for example.
+        You can change how the engine will build with build options in <code>EagleBuildSettings.h</code>. It is located in the root of your project (<code>Application/EagleBuildSettings.h</code>) You can disable the editor, for example.
     </p>
 
     <h2>Scenes</h2>
